更改样式和升级版本2.2.1

--- a/src/main/resources/templates/common/commonHeader.html
+++ b/src/main/resources/templates/common/commonHeader.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 引入font-awesome icons CSS  -->
-    <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/fontawesome.min.css}"></link>
+    <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.min.css}"/>
     <!-- 引入bootstrap插件样式 -->
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <!-- 引入bootstrap验证插件样式 -->
@@ -18,6 +18,8 @@
     <link rel="stylesheet" th:href="@{/webjars/layui/css/layui.css}"/>
     <!-- 消息提醒框样式 -->
     <link rel="stylesheet" th:href="@{/webjars/toastr/build/toastr.min.css}"/>
+
+    <link rel="icon" th:href="@{/images/favicon.ico}">
     <!--/* Per-page placeholder for additional links */-->
     <th:block th:replace="${links}"/>
     <!--/* Per-page placeholder for additional links */-->
