--- a/src/main/resources/templates/common/tagIcon.html
+++ b/src/main/resources/templates/common/tagIcon.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <!--引用通用head--->
-<head th:replace="/common/commonHeader::common_header(~{::title},~{},~{})">
+<head th:replace="/common/commonHeader::common_header(~{::title},~{},~{::style})">
     <title>图标管理</title>
-
+    <style>
+        .fontawesome-icon-list .fa-hover {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            display: block;
+            color: #222222;
+            line-height: 32px;
+            height: 32px;
+            padding-left: 10px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
 <!--引用通用JS-->
-<div th:replace="common/commonFoot::foot(~{})">
+<div th:replace="/common/commonFoot::foot(~{})">
 </div>
 <div id="icons">
 
-    <h2 class="page-header">66 New Icons in 4.4</h2>
-    <ul class="the-icons">
+    <h2 class="page-header">最新的4.7版，新增了41个图标</h2>
+
+
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-500px"></i> 500px</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-amazon"></i> amazon</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-balance-scale"></i> balance-scale</li>
@@ -93,7 +108,7 @@
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-yc"></i> yc <span class="text-muted">(alias)</span></li>
     </ul>
     <h2 class="page-header">Web Application Icons</h2>
-    <ul class="the-icons">
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-adjust"></i> adjust</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-anchor"></i> anchor</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-archive"></i> archive</li>
@@ -481,7 +496,7 @@
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-wrench"></i> wrench</li>
     </ul>
     <h2 class="page-header">Hand Icons</h2>
-    <ul class="the-icons">
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-hand-grab-o"></i> hand-grab-o <span class="text-muted">(alias)</span></li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-hand-lizard-o"></i> hand-lizard-o</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-hand-o-down"></i> hand-o-down</li>
@@ -501,7 +516,7 @@
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-thumbs-up"></i> thumbs-up</li>
     </ul>
     <h2 class="page-header">Transportation Icons</h2>
-    <ul class="the-icons">
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-ambulance"></i> ambulance</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-automobile"></i> automobile <span class="text-muted">(alias)</span></li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-bicycle"></i> bicycle</li>
@@ -521,7 +536,7 @@
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-wheelchair"></i> wheelchair</li>
     </ul>
     <h2 class="page-header">Gender Icons</h2>
-    <ul class="the-icons">
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-genderless"></i> genderless</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-intersex"></i> intersex <span class="text-muted">(alias)</span></li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-mars"></i> mars</li>
@@ -538,7 +553,7 @@
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-venus-mars"></i> venus-mars</li>
     </ul>
     <h2 class="page-header">File Type Icons</h2>
-    <ul class="the-icons">
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-file"></i> file</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-file-archive-o"></i> file-archive-o</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-file-audio-o"></i> file-audio-o</li>
@@ -559,7 +574,7 @@
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-file-zip-o"></i> file-zip-o <span class="text-muted">(alias)</span></li>
     </ul>
     <h2 class="page-header">Spinner Icons</h2>
-    <ul class="the-icons">
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-circle-o-notch"></i> circle-o-notch</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-cog"></i> cog</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-gear"></i> gear <span class="text-muted">(alias)</span></li>
@@ -567,7 +582,7 @@
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-spinner"></i> spinner</li>
     </ul>
     <h2 class="page-header">Form Control Icons</h2>
-    <ul class="the-icons">
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-check-square"></i> check-square</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-check-square-o"></i> check-square-o</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-circle"></i> circle</li>
@@ -581,7 +596,7 @@
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-square-o"></i> square-o</li>
     </ul>
     <h2 class="page-header">Payment Icons</h2>
-    <ul class="the-icons">
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-cc-amex"></i> cc-amex</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-cc-diners-club"></i> cc-diners-club</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-cc-discover"></i> cc-discover</li>
@@ -595,7 +610,7 @@
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-paypal"></i> paypal</li>
     </ul>
     <h2 class="page-header">Chart Icons</h2>
-    <ul class="the-icons">
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-area-chart"></i> area-chart</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-bar-chart"></i> bar-chart</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-bar-chart-o"></i> bar-chart-o <span class="text-muted">(alias)</span></li>
@@ -603,7 +618,7 @@
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-pie-chart"></i> pie-chart</li>
     </ul>
     <h2 class="page-header">Currency Icons</h2>
-    <ul class="the-icons">
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-bitcoin"></i> bitcoin <span class="text-muted">(alias)</span></li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-btc"></i> btc</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-cny"></i> cny <span class="text-muted">(alias)</span></li>
@@ -632,7 +647,7 @@
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-yen"></i> yen <span class="text-muted">(alias)</span></li>
     </ul>
     <h2 class="page-header">Text Editor Icons</h2>
-    <ul class="the-icons">
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-align-center"></i> align-center</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-align-justify"></i> align-justify</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-align-left"></i> align-left</li>
@@ -684,7 +699,7 @@
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-unlink"></i> unlink <span class="text-muted">(alias)</span></li>
     </ul>
     <h2 class="page-header">Directional Icons</h2>
-    <ul class="the-icons">
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-angle-double-down"></i> angle-double-down</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-angle-double-left"></i> angle-double-left</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-angle-double-right"></i> angle-double-right</li>
@@ -740,7 +755,7 @@
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-toggle-up"></i> toggle-up <span class="text-muted">(alias)</span></li>
     </ul>
     <h2 class="page-header">Video Player Icons</h2>
-    <ul class="the-icons">
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-arrows-alt"></i> arrows-alt</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-backward"></i> backward</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-compress"></i> compress</li>
@@ -760,7 +775,7 @@
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-youtube-play"></i> youtube-play</li>
     </ul>
     <h2 class="page-header">Brand Icons</h2>
-    <ul class="the-icons">
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-500px"></i> 500px</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-adn"></i> adn</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-amazon"></i> amazon</li>
@@ -908,7 +923,7 @@
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-youtube-square"></i> youtube-square</li>
     </ul>
     <h2 class="page-header">Medical Icons</h2>
-    <ul class="the-icons">
+    <ul class="fontawesome-icon-list">
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-ambulance"></i> ambulance</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-h-square"></i> h-square</li>
         <li class="fa-hover col-md-3 col-sm-4"><i class="fa fa-heart"></i> heart</li>
@@ -923,5 +938,31 @@
     </ul>
     <br/><br/>
 </div>
+
+<script type="text/javascript">
+    $(function () {
+        $(".fontawesome-icon-list li").click(function () {
+            var liDom=$(this);
+            var value="";
+            var text="";
+            if(liDom.length>0){
+                var liD=liDom.get(0);
+                console.log(liD);
+                if(liD.firstChild!=undefined){
+                    var iDom=liD.firstChild;
+                    value=iDom.className;
+                    console.log(value);
+                }
+                text=liD.textContent;
+                console.log(text);
+            }
+            var dataMap={};
+            dataMap.value=value;
+            dataMap.text=text
+            parent.getChildrenData(dataMap);
+            windowClose();
+        });
+    });
+</script>
 </body>
 </html>
