--- a/src/main/resources/templates/menu/menuForm.html
+++ b/src/main/resources/templates/menu/menuForm.html
@@ -1,77 +1,77 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
+
     <!--引用通用head--->
-    <head th:replace="/common/commonHeader::common_header(~{::title},~{::link},~{})">
-        <title>菜单信息</title>
-        <link rel="stylesheet" th:href="@{/webjars/bootstrap-datepicker/css/bootstrap-datepicker3.css}"/>
-    </head>
-<body class="gray-bg" >
-    <!--引用通用JS-->
     <div th:replace="/common/commonFoot::foot(~{::script})">
-        <script th:src="@{/webjars/bootstrap-datepicker/js/bootstrap-datepicker.min.js}"></script>
         <script th:src="@{/webjars/jquery-validation/jquery.validate.min.js}"></script>
-        <script th:src="@{/webjars/bootstrap-datepicker/locales/bootstrap-datepicker.zh-CN.min.js}"></script>
         <script th:src="@{/js/sys/menu/menu.js}"></script>
     </div>
     <div class="container-fluid panel-body" style="padding-bottom:0px">
         <div class="panel-body">
             <form id="menuForm" class="form-horizontal">
+    <head th:replace="/common/commonHeader::common_header(~{::title},~{},~{})">
+        <title>菜单信息</title>
+    </head>
+<body class="gray-bg">
+    <!--引用通用JS-->
 
-                <div class="form-inline">
+                <div class="form-group">
                     <input type="hidden" id="parentId" name="parentId" th:value="${menu.parentId}">
-                    <label for="parentMenuName">上级菜单</label>
-                    <div class="col-sm-10">
+                    <label for="parentMenuName" class="col-sm-3 control-label">上级菜单</label>
+                    <div class="col-sm-8">
                         <input class="form-control" type="text" id="parentMenuName" name="parentMenuName" th:value="${menu.parent.menuName}">
                     </div>
                 </div>
 
-                <div class="form-inline">
+                <div class="form-group">
                     <input type="hidden" id="menuId" name="menuId" th:value="${menu.menuId}">
-                    <label for="menuName">菜单名称</label>
-                    <div class="col-sm-10">
+                    <label for="menuName" class="col-sm-3 control-label">菜单名称</label>
+                    <div class="col-sm-8">
                         <input class="form-control" type="text" id="menuName" name="menuName" th:value="${menu.menuName}">
                     </div>
                 </div>
 
-                <div class="form-inline">
-                    <label for="menuUrl">菜单Url</label>
-                    <div class="col-sm-10">
+                <div class="form-group">
+                    <label for="menuUrl" class="col-sm-3 control-label">菜单Url</label>
+                    <div class="col-sm-8">
                         <input class="form-control" type="text" id="menuUrl" name="menuUrl" th:value="${menu.menuUrl}">
                     </div>
                 </div>
 
-                <div class="form-inline">
-                    <label >菜单类型</label>
-                    <div class="col-sm-10 text-left">
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">菜单类型</label>
+                    <div class="col-sm-8 text-left">
                         <label class="radio-inline">
-                            <input type="radio" name="menuType" value="0" /> 目录
+                            <input type="radio" name="menuType" value="0" th:field="*{menu.menuType}"/> 目录
                         </label>
                         <label class="radio-inline">
-                            <input type="radio"  name="menuType" value="1" /> 菜单
+                            <input type="radio" name="menuType" value="1" th:field="*{menu.menuType}"/> 菜单
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="menuType" value="2" /> 按钮
+                            <input type="radio" name="menuType" value="2" th:field="*{menu.menuType}"/> 按钮
                         </label>
                     </div>
                 </div>
 
-                <div class="form-inline">
-                    <label for="menuSort">菜单排序</label>
-                    <div class="col-sm-10">
+                <div class="form-group">
+                    <label for="menuSort" class="col-sm-3 control-label">菜单排序</label>
+                    <div class="col-sm-8">
                         <input class="form-control" type="text" id="menuSort" name="menuSort" th:value="${menu.menuSort}">
                     </div>
                 </div>
 
-                <div class="form-inline">
-                    <label for="menuSort">菜单图标</label>
-                    <div class="col-sm-10">
+                <div class="form-group">
+                    <label for="menuSort" class="col-sm-3 control-label">菜单图标</label>
+                    <div class="col-sm-8">
                         <input class="form-control" type="text" id="menuIcon" name="menuIcon" th:value="${menu.menuIcon}">
                     </div>
                     <input id="ico-btn" class="btn btn-warning" type="button" value="选择图标">
                 </div>
 
-                <div class="form-inline">
+                <div class="form-group text-center">
                     <button  type="submit" id="saveBtn" class="btn btn-primary">保存</button>
+                    <button  type="button" class="btn btn-default" onclick="windowClose()">关闭</button>
                 </div>
 
             </form>
