增加动画特效和main页面

--- a/src/main/resources/templates/common/commonHeader.html
+++ b/src/main/resources/templates/common/commonHeader.html
@@ -18,7 +18,8 @@
     <link rel="stylesheet" th:href="@{/webjars/layui/css/layui.css}"/>
     <!-- 消息提醒框样式 -->
     <link rel="stylesheet" th:href="@{/webjars/toastr/build/toastr.min.css}"/>
-
+    <!-- 动画特性animate -->
+    <link rel="stylesheet" th:href="@{/webjars/animate.css/animate.min.css}"/>
     <link rel="icon" th:href="@{/images/favicon.ico}">
     <!--/* Per-page placeholder for additional links */-->
     <th:block th:replace="${links}"/>
