--- a/src/main/resources/templates/user/userAdd.html
+++ b/src/main/resources/templates/user/userAdd.html
@@ -118,7 +118,7 @@
 
             <div class="form-inline">
                 <button type="submit" id="btn_save" name="btn_save" class="btn btn-primary" th:if="${readOnly} ne true" >保存</button>
-                <button type="button" id="btn_back" name="btn_back" class="btn btn-secondary" onclick="goBack()">返回</button>
+                <button type="button" id="btn_back" name="btn_back" class="btn btn-secondary" onclick="windowClose()">返回</button>
             </div>
         </form>
     </div>
